--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "@gluestack-ui/core": "^3.0.10",
     "@gluestack-ui/utils": "^3.0.7",
     "@gluestack/ui-next-adapter": "^3.0.3",
-    "@react-aria/utils": "^3.30.1",
+    "@react-aria/dialog": "^3.5.31",
+    "@react-aria/overlays": "^3.30.0",
+    "@react-aria/utils": "^3.31.0",
     "@react-native-async-storage/async-storage": "2.2.0",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
+    "@react-stately/overlays": "^3.6.20",
     "@tanstack/react-query": "^5.87.1",
     "axios": "^1.11.0",
     "expo": "~54.0.10",
